fix z-index

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -43,6 +43,7 @@
 
 .hero-decorate {
     position: relative;
+    z-index: -1;
     max-width: 375px;
 }
 
